--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProjetoFordenterAngular</title>
+  <title>AngularClass</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="h-100"></app-root>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    // Inicializa todos os componentes Bootstrap que precisam de JS
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+  });
+  </script>
 </body>
 </html>
