--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,6 +5,7 @@
   <title>AngularClass</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://localhost:3001; style-src 'self' 'unsafe-inline'; script-src 'self';">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
